src/jsonforms.css
.jsf-alert {
  color: #a94442;
}

.jsf legend {
  margin-bottom: 0.15em;
  width: inherit;
  padding: 0 10px;
  border-bottom:none;
}

.jsf fieldset {
  border: 1px solid #ccc !important;
  border-radius: 4px;
  padding: 0 1.4em 1.4em 1.4em !important;
  margin: 0 0 1.5em 0 !important;
}
.jsf-control .form-control {
  flex:1;
  height: 1.5em;
  padding: 1px 0px;
}
.jsf-control select.form-control {
  box-sizing: content-box;
  padding: 2px 0px;
}
.jsf-control-boolean {
  align-self: center;
  min-height: 1.5em;
  min-width: 1.5em;
  margin: 0;
}
array-control fieldset > div > div {
  margin-bottom: 0.5em;
}
.jsf-categorization ul {
  list-style-type: none;
  cursor: default;
  padding: 0;
  margin: 0;
}
.jsf-categorization .jsf-categorization-master .jsf-category-entry{
  display: block;
}
.jsf-categorization .jsf-categorization-master .jsf-category-entry:hover,
.jsf-categorization .jsf-categorization-master .jsf-category-entry.selected{
  background-color: lightgrey;
}
.jsf-categorization {
  display: flex;
  border: 1px solid;
}
.jsf-categorization>div, .jsf-categorization>fieldset{
  margin:0.25em;
  min-width: 2em;
  border: 1px solid;
  padding: 0.5em;
}
.jsf-categorization>.jsf-categorization-master{
  flex:3 1 0.3vw;
}
.jsf-categorization>.jsf-categorization-detail{
  flex:7 1 0.7vw;
}
.jsf-vertical-layout-container>div{margin-top: 0.5em}
.jsf-vertical-layout-container>div:first-child{margin-top: 0}
.jsf-group { }
.jsf-horizontal-layout > .jsf-horizontal-layout-container {
  margin: 0;
  display: flex;
  justify-content: space-between;
}
.jsf-horizontal-layout > .jsf-horizontal-layout-container > div {
  flex:1;
  margin:0 0.5em;
  min-width: 2em;
}
.jsf-horizontal-layout > .jsf-horizontal-layout-container > div:first-child {
  margin-left: 0;
}
.jsf-horizontal-layout > .jsf-horizontal-layout-container > div:last-child {
  margin-right: 0;
}
.jsf-masterdetail {
  display: flex;
  /*border: 1px solid #ccc;*/
  /*border-radius: 4px;*/
}
.jsf-masterdetail>div{
  margin:0.25em;
  min-width: 2em;
  border: 1px solid #ccc;
  border-radius: 4px;
}
.jsf-masterdetail>.jsf-masterdetail-master{
  flex:3 1 0.3vw;
}
.jsf-masterdetail>.jsf-masterdetail-detail{
  flex:7 1 0.7vw;
  padding: 0.5em;
}
.jsf-masterdetail ul {
  list-style-type: none;
  cursor: default;
  padding: 0.5em;
  margin: 0;
}
.jsf-masterdetail .jsf-masterdetail-properties {
}
.jsf-masterdetail .jsf-masterdetail-properties > li{
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-top: 0.25em;
}
.jsf-masterdetail .jsf-masterdetail-properties > li:first-child{
  margin-top: 0;
}
.jsf-masterdetail .jsf-masterdetail-properties .jsf-masterdetail-empty {
  display: none;
}
.jsf-masterdetail .jsf-masterdetail-entries {
}
.jsf-masterdetail .jsf-masterdetail-entries > li{
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-top: 0.25em;
}
.jsf-masterdetail .jsf-masterdetail-entries > li:first-child{
  margin-top: 0;
}
.jsf-masterdetail .jsf-masterdetail-master .jsf-masterdetail-entry,
.jsf-masterdetail .jsf-masterdetail-master .jsf-masterdetail-property{
  display: inline-block;
  padding: 0.25em;
}

.jsf-masterdetail-entry {
  font-size: 0.9em;
}

.jsf-masterdetail .jsf-masterdetail-master .jsf-masterdetail-entry:hover,
.jsf-masterdetail .jsf-masterdetail-master .jsf-masterdetail-entry-selected{
  background-color: lightgrey;
}
.jsf-masterdetail .jsf-masterdetail-master .chevron-right:after{
  content:"\2003 \25B6"
}
.jsf-masterdetail .jsf-masterdetail-master .chevron-down:after{
  content:"\2003 \25BC"
}

